fixes dual map and grid and fixes sus question on small screens

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -105,6 +105,11 @@ html, body {
   }
 }
 
+.dualmaps {
+  padding: 0px !important;
+  margin-right: 0px !important;
+}
+
 #compare-wrapper {
   position: relative;
   height: $mapHeight !important;
